# qr_code_maker_for_check_django

./: .env.sample  README.md  main.py  pyproject.toml
cash_machine/: admin.py  models.py  post_request.py  serializers.py  urls.py  utils.py  views.py
cash_machine/migrations/: 0001_initial.py
cash_machine/templates/cash_machine/: item_list.html
config/: settings.py  urls.py
